# doctools

./: .gitignore  README.md  pyproject.toml
script/: markdown_splitter.py  pdf2markdown.py  web_content_extractor.py  web_scraper_to_markdown.py
