[tool.poetry]
name = "doctools"
version = "0.1.0"
description = ""
authors = ["tak-akashi <tak.akashi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.3.0"
langchain-community = "0.3.0"
pdfplumber = "^0.11.5"
jupyter = "^1.1.1"
pdf2image = "^1.17.0"
langchain-openai = "^0.3.7"
azure-ai-documentintelligence = "^1.0.0"
langgraph = "^0.3.2"
langchain-core = "^0.3.50"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
