[project]
name = "doctools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-documentintelligence>=1.0.2",
    "bs4>=0.0.2",
    "html2text>=2025.4.15",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-openai>=0.3.23",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.8",
    "lxml>=5.4.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]
